[package]
name = "turboquant"
version = "0.1.0"
edition = "2021"
description = "TurboQuant: KV cache compression via PolarQuant + QJL — Rust port"
license = "MIT"

[dependencies]
ndarray = "0.16"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
statrs = "0.17"
thiserror = "1"

[dev-dependencies]
approx = "0.5"
